avance por varias bandas

--- a/src/app/archive/archive.page.html
+++ b/src/app/archive/archive.page.html
@@ -112,7 +112,7 @@
       <span>{{ 'MAP.MAP_BUTTON' | translate }}</span>
     </div>
     <div class="record-button" (click)="fs.gotoPage('canvas')">
-      <ion-icon name="analytics-sharp"></ion-icon>
+      <ion-icon name="bar-chart-sharp"></ion-icon>
       <span>{{ 'MAP.DATA_BUTTON' | translate }}</span>
     </div>
     <div class="record-button" (click)="fs.gotoPage('settings')">
