--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -219,7 +219,7 @@
       <span>{{ 'MAP.MAP_BUTTON' | translate }}</span>
     </div>
     <div class="record-button" (click)="fs.gotoPage('archive')">
-      <ion-icon name="list-sharp"></ion-icon>
+      <ion-icon name="library-sharp"></ion-icon>
       <span>{{ 'MAP.ARCHIVE_BUTTON' | translate }}</span>
     </div>
     <div class="record-button" (click)="fs.gotoPage('settings')">
