--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -7,7 +7,7 @@
     <ion-item lines="full">
       <ion-icon name="language-sharp" slot="start" color="primary"></ion-icon>
       <ion-label>{{ 'SETTINGS.LANGUAGE' | translate }}</ion-label>
-      <ion-select [value]="selectedLanguage.code" (ionChange)="onLanguageChange($event.detail.value)" interface="popover" slot="end">
+      <ion-select [value]="selectedLanguage?.code" (ionChange)="onLanguageChange($event.detail.value)" interface="popover" slot="end">
         @for (lang of languages; track lang.code) {
           <ion-select-option [value]="lang.code">{{ lang.name }}</ion-select-option>
         }
@@ -73,6 +73,7 @@
       </ion-select>
     </ion-item>
 
+    <!--
     <ion-item lines="none">
       <ion-label>{{ 'SETTINGS.SAVED_TRACK_ALTITUDE' | translate }}</ion-label>
       <ion-select [value]="fs.selectedAltitude" (ionChange)="onAltitudeChange($event.detail.value)" interface="popover" slot="end">
@@ -81,6 +82,7 @@
         }
       </ion-select>
     </ion-item>
+    -->
   </ion-list>
 
   <ion-list-header>
@@ -132,11 +134,11 @@
       <span>{{ 'MAP.MAP_BUTTON' | translate }}</span>
     </div>
     <div class="record-button" (click)="fs.gotoPage('canvas')">
-      <ion-icon name="analytics-sharp"></ion-icon>
+      <ion-icon name="bar-chart-sharp"></ion-icon>
       <span>{{ 'MAP.DATA_BUTTON' | translate }}</span>
     </div>
     <div class="record-button" (click)="fs.gotoPage('archive')">
-      <ion-icon name="list-sharp"></ion-icon>
+      <ion-icon name="library-sharp"></ion-icon>
       <span>{{ 'MAP.ARCHIVE_BUTTON' | translate }}</span>
     </div>
   </ion-row>
