--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,6 +17,17 @@
   </ion-row>
 </ion-fab>
 
+<!-- On route? -->
+@if (present.currentTrack && reference.archivedTrack) { 
+  <ion-fab slot="fixed" class="route-indicator-fab" (click)="showStatusToast()">
+    <div class="status-indicator-container">
+      <div class="led-button" [ngClass]="routeStatus">
+        <ion-icon [name]="routeStatus === 'green' ? 'checkmark-circle' : (routeStatus === 'red' ? 'alert-circle' : 'help-circle')"></ion-icon>
+      </div>
+    </div>
+  </ion-fab>
+}
+
 <!-- Regular content -->
 <ion-content [fullscreen]="true">
   <app-record-popover></app-record-popover>
